[tool.poetry]
name = "vkwave-api"
version = "0.3.5"
description = "Accessing VK API for humans."
authors = ["prostomarkeloff <28061158+prostomarkeloff@users.noreply.github.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"
vkwave = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
